export interface Account {
  fullName: string;
  emailAddress: string;
  age: Number;
  driversNo: string;
  driversImageURL : string;
}
